fixed navbar (as well as spacing between links to improve UX), changed design of mobile nav to work better with other components

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -7,11 +7,13 @@
 
 .nav {
    position: fixed;
-   z-index: 300;
+   z-index: 600;
    bottom: 2rem;
+   bottom: 0;
    width: 80vw;
+   width: 100vw;
    height: 8vh;
-   border-radius: 999px;
+   /* border-radius: 999px; */
    /* box-shadow: 1px 0 6px 0px rgba(0, 0, 0, 0.25); */
    /* padding: 5rem 1rem; */
    border: 1px solid rgb(217, 217, 217);
@@ -58,7 +60,6 @@
    justify-content: space-between;
    align-items: center;
    /* background-color: red; */
-   padding: 0 0;
 
    /* -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
@@ -75,6 +76,25 @@
    font-size: 0.75rem;
 }
 
+@media (max-width: 767px) {
+   .nav-flex-item {
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   
+}
+
+.nav-link {
+   /* padding: 0 30px; */
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+}
 
 /* 
 .nav-top-panels {
@@ -202,10 +222,10 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 10px;
       gap: 2rem;
       transition: all 0.1s ease-in-out;
       color: rgb(120, 120, 120);
-      /* background-color: blue; */
    }
 
    .nav-link {
