--- a/client/src/context/Notification/Notification.css
+++ b/client/src/context/Notification/Notification.css
@@ -14,6 +14,7 @@
    top: 2rem;
    left: 50%;
    border-radius: 8px;
+   background-color: white;
    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.3);
    z-index: 3000;
 }
